# dev-storage-manager

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SCANNER_FIX.md
.cargo/: config.toml
.github/: QUICK_REFERENCE.md  RELEASE_GUIDE.md  RELEASE_TEMPLATE.md  SETUP.md  SETUP_COMPLETE.md  WORKFLOW_DIAGRAM.md
.github/workflows/: README.md  ci.yml  release.yml
DevStorageCleaner.app/Contents/: Info.plist
docs/: THEME_COLORS.md
scripts/: build-macos-app.sh  build.bat  bump-version.ps1  bump-version.sh  create-dmg.sh  create-macos-app.sh  package-windows.bat  setup-macos.sh  setup-windows.bat
src/: app.rs  config.rs  main.rs  scanner.rs
src/ui/: mod.rs  theme.rs
