[package]
name = "dev-storage-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
chrono = "0.4"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
native-dialog = "0.7"
